# dbt-databricks-uc-udfs

dbt_with_udf_example/: .gitignore  README.md  databricks.yml  dbt_project.yml  profile_template.yml
dbt_with_udf_example/resources/: dbt_with_udf_example.job.yml
dbt_with_udf_example/src/macros/: create_python_udf.sql  create_sql_udf.sql
dbt_with_udf_example/src/models/example/: orders_raw.sql
dbt_with_udf_example/src/udf-py/: pyproject.toml
dbt_with_udf_example/src/udf-py/src/udf/: helpers.py
dbt_with_udf_example/src/udf-py/tests/: test_udf.py
