[project]
name = "udf-py"
version = "0.1.0"
description = "UDFs for python"
authors = [
    {name = "Neelabh Kashyap",email = "neelabh2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = true
packages = [{ include = "udf", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
